--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -21,6 +21,9 @@
                 <a class="navbar-item " href="https://bulma.io/love/">
                     {{ 'rating' | trans }}
                 </a>
+                <a class="navbar-item " href="{{ path('app_tournament_index') }}">
+                    {{ 'tournaments' | trans }}
+                </a>
             </div>
 
             <div class="navbar-end">
