--- a/src/AppBundle/Resources/views/Tournament/tournament.html.twig
+++ b/src/AppBundle/Resources/views/Tournament/tournament.html.twig
@@ -6,4 +6,10 @@
     <p>{{ tournament.start | localizeddate }} - {{ tournament.end | localizeddate }}</p>
     <h1 class="title">{{ tournament.title }}</h1>
     <p>{{ tournament.description }}</p>
+
+    <table class="table">
+        {% for problem in tournament.problems %}
+            <tr><td>{{ problem.title }}</td></tr>
+        {% endfor %}
+    </table>
 {% endblock %}
