--- a/src/AppBundle/Resources/views/Solution/index.html.twig
+++ b/src/AppBundle/Resources/views/Solution/index.html.twig
@@ -37,5 +37,34 @@
         </tbody>
     </table>
 
-    
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+
+    <script src="{{ asset('bundles/goswebsocket/js/vendor/autobahn.min.js') }}"></script>
+    <script src="{{ asset('bundles/goswebsocket/js/gos_web_socket_client.js') }}"></script>
+    <script type="text/javascript">
+        window.onload = function() {
+            var webSocket = WS.connect("ws://127.0.0.1:8080");
+
+            webSocket.on("socket/connect", function(session){
+                //session is an Autobahn JS WAMP session.
+
+                console.log("Successfully Connected!");
+
+                session.subscribe("app/chat", function(uri, payload){
+                    console.log("Received message", payload.msg);
+                });
+
+                // session.publish("app/chat", "Привет, я пришел от клиента!!!");
+            });
+
+            webSocket.on("socket/disconnect", function(error) {
+                //error provides us with some insight into the disconnection: error.reason and error.code
+
+                console.log("Disconnected for " + error.reason + " with code " + error.code);
+            });
+        }
+    </script>
 {% endblock %}
