--- a/src/AppBundle/Resources/views/Solution/index.html.twig
+++ b/src/AppBundle/Resources/views/Solution/index.html.twig
@@ -30,8 +30,8 @@
                 <td class="has-text-centered">{{ solution.language }}</td>
                 <td class="has-text-centered">{{ solution.status }}</td>
                 <td class="has-text-centered">{{ solution.test }}</td>
-                <td class="has-text-centered">{{ solution.time }}</td>
-                <td class="has-text-centered">{{ solution.memory }}</td>
+                <td class="has-text-centered">{{ solution.time | number_format(3) }}</td>
+                <td class="has-text-centered">{{ (solution.memory/1024) | number_format(2) }} KB</td>
             </tr>
         {% endfor %}
         </tbody>
