--- a/src/AppBundle/Resources/views/Problem/index.html.twig
+++ b/src/AppBundle/Resources/views/Problem/index.html.twig
@@ -1,16 +1,13 @@
-<table>
-    <th>
-        <tr>
-            <td>ID</td>
-            <td>Name</td>
-        </tr>
-    </th>
-    <tbody>
-    {% for problem in problems %}
-        <tr>
-            <td>{{ problem.id }}</td>
-            <td><a href="{{ path('problem', {id: problem.id}) }}">{{ problem.title }}</a></td>
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
+{% extends 'base.html.twig' %}
+
+{% block body %}
+    <nav class="panel is-fullwidth is-bordered">
+        {% for problem in problems %}
+            <a href="{{ path('problem', {id: problem.id}) }}" class="panel-block">
+                <h6 class="subtitle is-6">
+                    {{ problem.title }}
+                </h6>
+            </a>
+        {% endfor %}
+    </nav>
+{% endblock %}
