--- a/src/AppBundle/Resources/views/Tournament/tournament.html.twig
+++ b/src/AppBundle/Resources/views/Tournament/tournament.html.twig
@@ -5,6 +5,9 @@
 {% block body %}
     {% include "::tournament-helper.html.twig" %}
 
+    {% if date("now") < date(tournament.start) %}
+    <p>Problems will be available after start tournament!</p>
+    {% else %}
     <nav class="panel is-fullwidth is-bordered">
         {% for problem in tournament.problems %}
             <a href="{{ path('problem', {id: problem.id}) }}" class="panel-block">
@@ -14,5 +17,5 @@
             </a>
         {% endfor %}
     </nav>
-    </table>
+    {% endif %}
 {% endblock %}
