--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -3,10 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
+
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('vendor/font-awesome/css/font-awesome.css') }}">
             <link rel="stylesheet" href="{{ asset('vendor/bulma/css/bulma.css') }}">
         {% endblock %}
+
+        <script src="{{ asset('vendor/jquery/dist/jquery.js') }}"></script>
+
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
@@ -17,6 +21,8 @@
                 {% block body %}{% endblock %}
             </div>
         </section>
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+
+        {% endblock %}
     </body>
 </html>
