tst-31: Register Users to tournament

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,6 +8,9 @@
             <link rel="stylesheet" href="{{ asset('vendor/bulma/css/bulma.css') }}">
         {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        {% block javascripts %}
+            <script src="{{ asset('vendor/jquery/dist/jquery.min.js') }}"></script>
+        {% endblock %}
     </head>
     <body>
         {% include "::navbar.html.twig" %}
@@ -17,6 +20,6 @@
                 {% block body %}{% endblock %}
             </div>
         </section>
-        {% block javascripts %}{% endblock %}
+
     </body>
 </html>
