--- a/app/Resources/views/tournament-helper.html.twig
+++ b/app/Resources/views/tournament-helper.html.twig
@@ -1,3 +1,4 @@
+{% set route = app.request.attributes.get('_route') %}
 <h1 class="title">{{ tournament.title }}</h1>
 
 <div class="container">
@@ -45,11 +46,26 @@
 <br/>
 
 
-<div class="tabs is-fullwidth is-boxed">
+<div class="tabs">
     <ul>
-        <li class="{% if app.request.attributes.get('_route') == 'tournament' %}is-active{% endif %}"><a href="{{ path('tournament', {id: tournament.id}) }}">{{ 'tournament.problems' | trans }}</a></li>
-        <li class="{% if app.request.attributes.get('_route') == 'tournamentSent' %}is-active{% endif %}"><a href="{{ path('tournamentSent', {id: tournament.id}) }}">{{ 'tournament.sent' | trans }}</a></li>
-        <li class="{% if app.request.attributes.get('_route') == 'tournamentRating' %}is-active{% endif %}"><a href="{{ path('tournamentRating', {id: tournament.id}) }}">{{ 'tournament.rating' | trans }}</a></li>
+        <li class="{% if route == 'tournament' %}is-active{% endif %}">
+            <a href="{{ path('tournament', {id: tournament.id}) }}">
+                <span class="icon is-small"><i class="fa fa-list"></i></span>
+                <span>{{ 'tournament.problems' | trans }}</span>
+            </a>
+        </li>
+        <li class="{% if route == 'tournamentSent' %}is-active{% endif %}">
+            <a href="{{ path('tournamentSent', {id: tournament.id}) }}">
+                <span class="icon is-small"><i class="fa fa-paper-plane"></i></span>
+                <span>{{ 'tournament.sent' | trans }}</span>
+            </a>
+        </li>
+        <li class="{% if route == 'tournamentRating' %}is-active{% endif %}">
+            <a href="{{ path('tournamentRating', {id: tournament.id}) }}">
+                <span class="icon is-small"><i class="fa fa-bar-chart"></i></span>
+                <span>{{ 'tournament.rating' | trans }}</span>
+            </a>
+        </li>
     </ul>
 </div>
 
