--- a/src/AppBundle/Resources/views/Tournament/tournament.html.twig
+++ b/src/AppBundle/Resources/views/Tournament/tournament.html.twig
@@ -9,12 +9,15 @@
     <p>Problems will be available after starting tournament!</p>
     {% else %}
     <nav class="panel is-fullwidth is-bordered">
+        {% set i = 0 %}
+        {% set alphabet = ['a','b','c','d','e','f','g','h','i','j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z'] %}
         {% for problem in tournament.problems %}
-            <a href="{{ path('problem', {id: problem.id}) }}" class="panel-block">
+            <a href="{{ path('tournament_problem', {tournamentId: tournament.id, problemId: problem.id}) }}" class="panel-block">
                 <h6 class="subtitle is-6">
-                    {{ problem.title }}
+                    <b>{{ alphabet[i]|upper }}.</b> {{ problem.title }}
                 </h6>
             </a>
+            {% set i = i + 1 %}
         {% endfor %}
     </nav>
     {% endif %}
