--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -19,7 +19,8 @@
                    href="{{ path('solutions') }}">
                     {{ 'system_status' | trans }}
                 </a>
-                <a class="navbar-item " href="https://bulma.io/love/">
+                <a class="navbar-item {% if app.request.get('_route') == 'rating'%}is-active{% endif %}"
+                   href="{{ path('rating') }}">
                     {{ 'rating' | trans }}
                 </a>
                 <a class="navbar-item  {% if app.request.get('_route') == 'tournaments' or app.request.get('_route') == 'tournament' or app.request.get('_route') == 'tournamentSent' or app.request.get('_route') == 'tournamentRating' %}is-active{% endif %}"
