--- a/app/Resources/views/solution.html.twig
+++ b/app/Resources/views/solution.html.twig
@@ -16,7 +16,7 @@
     {% for solution in solutions %}
         <tr>
             <td class="has-text-centered">
-                {% if ("ROLE_SUPER_ADMIN" in currentUser.roles) or currentUser.id == solution.user.id %}
+                {% if ("ROLE_SUPER_ADMIN" in app.user.roles) or app.user.id == solution.user.id %}
                 <a href="{{ path('solution', {id: solution.id}) }}">{{ solution.id }}</a>
                 {% else %}
                     {{ solution.id }}
