--- a/app/Resources/views/solution.html.twig
+++ b/app/Resources/views/solution.html.twig
@@ -13,7 +13,7 @@
     </tr>
     </thead>
     <tbody>
-    {% for solution in solutions %}
+    {% for solution in pagination %}
         <tr>
             <td class="has-text-centered">
                 {% if ("ROLE_SUPER_ADMIN" in app.user.roles) or app.user.id == solution.user.id %}
@@ -42,3 +42,5 @@
     {% endfor %}
     </tbody>
 </table>
+
+{{ knp_pagination_render(pagination) }}
