--- a/src/AppBundle/Resources/views/Rating/index.html.twig
+++ b/src/AppBundle/Resources/views/Rating/index.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <div>Total: {{ pagination.getTotalItemCount }}</div>
 
     <table class="table is-bordered is-striped is-narrow is-fullwidth">
         <thead>
@@ -12,8 +13,8 @@
         </tr>
         </thead>
         <tbody>
-        {% set rank = 1 %}
-        {% for value in rating %}
+        {% set rank = app.request.get('page')|number_format * perPage %}
+        {% for value in pagination %}
             <tr>
                 <td class="has-text-centered">{{ rank }}</td>
                 <td class="has-text-centered">{{ value.user.username }}</td>
@@ -24,5 +25,7 @@
         {% endfor %}
         </tbody>
     </table>
+
+    {{ knp_pagination_render(pagination) }}
 
 {% endblock %}
