--- a/app/Resources/FOSCommentBundle/views/Thread/comment_content.html.twig
+++ b/app/Resources/FOSCommentBundle/views/Thread/comment_content.html.twig
@@ -13,7 +13,11 @@
     <article class="media">
         <figure class="media-left">
             <p class="image is-64x64">
-                <img src="https://bulma.io/images/placeholders/128x128.png">
+                {% if comment.author %}
+                    <img src="{{ avatar(comment.author, 128) }}">
+                {% else %}
+
+                {% endif %}
             </p>
         </figure>
         <div id="fos_comment_{{ comment.id }}" class="media-content fos_comment_comment_show fos_comment_comment_depth_{{ depth }}" {% if parent is defined and parent is not null %}data-parent="{{ parent.id }}"{% endif %}>
