--- a/src/AppBundle/Resources/views/Users/user.html.twig
+++ b/src/AppBundle/Resources/views/Users/user.html.twig
@@ -1,8 +1,8 @@
-{% extends "@FOSUser/layout.html.twig" %}
+{% extends "::base.html.twig" %}
 
-{% trans_default_domain 'FOSUserBundle' %}
+{% block title %}AppBundle:Users:user{% endblock %}
 
-{% block fos_user_content %}
+{% block body %}
     <div class="columns">
         <div class="column is-one-third">
             {% include "@App/Users/_avatar.html.twig" %}
@@ -11,4 +11,4 @@
             {% include "@App/Users/_tabs.html.twig" %}
         </div>
     </div>
-{% endblock fos_user_content %}
+{% endblock %}
