--- a/app/Resources/views/solution.html.twig
+++ b/app/Resources/views/solution.html.twig
@@ -12,35 +12,8 @@
         <th class="has-text-centered">Memory</th>
     </tr>
     </thead>
-    <tbody>
-    {% for solution in pagination %}
-        <tr>
-            <td class="has-text-centered">
-                {% if app.user and (("ROLE_SUPER_ADMIN" in app.user.roles) or app.user.id == solution.user.id) %}
-                <a href="{{ path('solution', {id: solution.id}) }}">{{ solution.id }}</a>
-                {% else %}
-                    {{ solution.id }}
-                {% endif %}
-            </td>
-            <td class="has-text-centered">
-                {% if solution.createdAt %}
-                    {{ solution.createdAt|date('d.m.Y H:i:s') }}
-                {% endif %}
-            </td>
-            <td>{{ solution.user }}</td>
-            <td class="has-text-centered"><a href="{{ path('problem', {problemId: solution.problem.id}) }}">{{ solution.problem }}</a> </td>
-            <td class="has-text-centered">{{ solution.language }}</td>
-            <td class="has-text-centered">
-                <span class="has-text-{% if solution.status.id == 1 %}success{% elseif solution.status.id < 8 %}danger{% else %}{% endif %}">
-                    {{ solution.status.title }}
-                </span>
-            </td>
-            <td class="has-text-centered">{{ solution.test }}</td>
-            <td class="has-text-centered">{{ solution.time | number_format(3) }}</td>
-            <td class="has-text-centered">{{ (solution.memory/1024) | number_format(2) }} KB</td>
-        </tr>
-    {% endfor %}
+    <tbody id="solutions">
+        {% include "_solutions.html.twig" with {solutions: pagination} %}
     </tbody>
 </table>
-
 {{ knp_pagination_render(pagination) }}
